--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Tiro's personal site</title>
   </head>
   <body
-    <img src="C:\Web Development\HTML-Personal Site\WilliamTiro.jpg" alt="William profile picture">
+    <img src="images/WilliamTiro.jpg" alt="William profile picture">
     <h1>Tiro William</h1>
     <p><em>Found and CTO of the <strong>App Brewery</strong></em></p>
     <p>I am an iOS and web Developer, I love cofee and brew and my own beers.</p>
